# FirnExchangeV2

./: ADMIN_GUIDE_TASK_ARCHITECTURE.md  FirnExchange.py  README.md  USER_GUIDE.md  environment.yml  firn_procedures.sql  firnexchange_sis.sql  firnexchange_sis_ATT.sql  pyproject.toml
